[gd_scene load_steps=15 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://EncounterEditScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://StoryworldMergingScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://SettingsEditScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://DocumentationScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://AuthoredPropertyCreationScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://StoryworldValidationInterface.tscn" type="PackedScene" id=8]
[ext_resource path="res://SpoolEditScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://EncounterOverviewScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://GraphViewScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://PlayScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://CharacterEditScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://StatisticsScreen.tscn" type="PackedScene" id=14]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="MenuButton" parent="VBC"]
margin_right = 48.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Menu"
align = 0
script = ExtResource( 2 )

[node name="EditorTabs" type="TabContainer" parent="VBC"]
margin_top = 24.0
margin_right = 1366.0
margin_bottom = 736.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overview" type="Tabs" parent="VBC/EditorTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="EncounterOverviewScreen" parent="VBC/EditorTabs/Overview" instance=ExtResource( 10 )]

[node name="Encounters" type="Tabs" parent="VBC/EditorTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EncounterEditScreen" parent="VBC/EditorTabs/Encounters" instance=ExtResource( 3 )]

[node name="Spools" type="Tabs" parent="VBC/EditorTabs"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="SpoolEditScreen" parent="VBC/EditorTabs/Spools" instance=ExtResource( 9 )]

[node name="Characters" type="Tabs" parent="VBC/EditorTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = 32.0

[node name="CharacterEditScreen" parent="VBC/EditorTabs/Characters" instance=ExtResource( 13 )]

[node name="PersonalityModel" type="Tabs" parent="VBC/EditorTabs"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="AuthoredPropertyCreationScreen" parent="VBC/EditorTabs/PersonalityModel" instance=ExtResource( 7 )]

[node name="Settings" type="Tabs" parent="VBC/EditorTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SettingsEditScreen" parent="VBC/EditorTabs/Settings" instance=ExtResource( 5 )]

[node name="Documentation" type="Tabs" parent="VBC/EditorTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 96.0
margin_right = -4.0
margin_bottom = 60.0

[node name="DocumentationScreen" parent="VBC/EditorTabs/Documentation" instance=ExtResource( 6 )]

[node name="GraphView" type="Tabs" parent="VBC/EditorTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 96.0
margin_right = -4.0
margin_bottom = 60.0

[node name="GraphViewScreen" parent="VBC/EditorTabs/GraphView" instance=ExtResource( 11 )]

[node name="Play" type="Tabs" parent="VBC/EditorTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 96.0
margin_right = -4.0
margin_bottom = 60.0

[node name="PlayScreen" parent="VBC/EditorTabs/Play" instance=ExtResource( 12 )]

[node name="Bookspine" type="HSplitContainer" parent="VBC"]
visible = false
margin_top = 88.0
margin_right = 1366.0
margin_bottom = 788.0
rect_min_size = Vector2( 0, 700 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterpreterTabs" type="TabContainer" parent="VBC/Bookspine"]
margin_right = 1366.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadFileDialog" type="FileDialog" parent="."]
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 200, 400 )
window_title = "Load a Saved Project"
resizable = true
mode_overrides_title = false
mode = 0
access = 2

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 200, 400 )
resizable = true
access = 2

[node name="CompileFileDialog" type="FileDialog" parent="."]
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 200, 400 )
window_title = "Compile to HTML"
resizable = true
access = 2

[node name="ConfirmOpenWhenUnsaved" type="ConfirmationDialog" parent="."]
margin_right = 700.0
margin_bottom = 70.0
dialog_text = "You have not yet saved your current project. Are you sure you wish to open another project without saving?"

[node name="ConfirmQuit" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
dialog_text = "You have modified your project without saving. Do you wish to quit without saving first? Progress will be lost."
dialog_autowrap = true

[node name="ConfirmNewStoryworld" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
dialog_text = "You have modified your project since you last saved. Do you wish to start a new project without saving your current one? Progress will be lost."
dialog_autowrap = true

[node name="ImportXMLFileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 320.0
window_title = "Import Project from XML"
resizable = true
mode_overrides_title = false
mode = 0
access = 2

[node name="About" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
size_flags_vertical = 2
window_title = "About"

[node name="VBoxContainer" type="VBoxContainer" parent="About"]
margin_left = 8.0
margin_top = 8.0
margin_right = 398.0
margin_bottom = 108.0
size_flags_vertical = 0

[node name="VersionMessage" type="Label" parent="About/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
align = 1

[node name="HSeparator" type="HSeparator" parent="About/VBoxContainer"]
margin_right = 40.0
margin_bottom = 4.0

[node name="Par1" type="Label" parent="About/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
text = "An interactive storyworld creation kit, created by Sasha Fenn."
align = 1

[node name="Par2" type="Label" parent="About/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "You can help support me through:"
align = 1

[node name="OpenPatreonButton" type="Button" parent="About/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "My Patreon"

[node name="Par3" type="Label" parent="About/VBoxContainer"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "And you can contact me by email at sasha@emptiestvoid.com."

[node name="Par4" type="Label" parent="About/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Thanks, and peace to you."
align = 1

[node name="ImportFromStoryworldFileDialog" type="FileDialog" parent="."]
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 200, 100 )
window_title = "Import from:"
resizable = true
dialog_text = "Choose a storyworld to import content from."
dialog_hide_on_ok = true
mode_overrides_title = false
mode = 1
access = 2

[node name="ConfirmImport" type="ConfirmationDialog" parent="."]
margin_right = 550.0
margin_bottom = 512.0
rect_min_size = Vector2( 550, 512 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="ConfirmImport"]
margin_left = 8.0
margin_top = 8.0
margin_right = 542.0
margin_bottom = 476.0

[node name="StoryworldMergingScreen" parent="ConfirmImport/Margin" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 534.0
margin_bottom = 468.0

[node name="StoryworldTroubleshooting" type="AcceptDialog" parent="."]
margin_right = 700.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 512 )
window_title = "Storyworld Validation and Troubleshooting"
resizable = true

[node name="StoryworldValidationInterface" parent="StoryworldTroubleshooting" instance=ExtResource( 8 )]
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="Summary" type="AcceptDialog" parent="."]
margin_right = 610.0
margin_bottom = 310.0
rect_min_size = Vector2( 256, 256 )
window_title = "Storyworld Summary"
resizable = true

[node name="Statistics" parent="Summary" instance=ExtResource( 14 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 602.0
margin_bottom = 274.0

[connection signal="file_selected" from="LoadFileDialog" to="." method="_on_LoadFileDialog_file_selected"]
[connection signal="file_selected" from="SaveAsFileDialog" to="." method="_on_SaveAsFileDialog_file_selected"]
[connection signal="file_selected" from="CompileFileDialog" to="." method="_on_CompileFileDialog_file_selected"]
[connection signal="confirmed" from="ConfirmOpenWhenUnsaved" to="." method="_on_ConfirmOpenWhenUnsaved_confirmed"]
[connection signal="confirmed" from="ConfirmQuit" to="." method="_on_ConfirmQuit_confirmed"]
[connection signal="confirmed" from="ConfirmNewStoryworld" to="." method="_on_ConfirmNewStoryworld_confirmed"]
[connection signal="file_selected" from="ImportXMLFileDialog" to="." method="_on_ImportXMLFileDialog_file_selected"]
[connection signal="pressed" from="About/VBoxContainer/OpenPatreonButton" to="." method="_on_OpenPatreonButton_pressed"]
[connection signal="file_selected" from="ImportFromStoryworldFileDialog" to="." method="_on_ImportFromStoryworldFileDialog_file_selected"]
[connection signal="files_selected" from="ImportFromStoryworldFileDialog" to="." method="_on_ImportFromStoryworldFileDialog_files_selected"]
[connection signal="confirmed" from="ConfirmImport" to="." method="_on_ConfirmImport_confirmed"]
